<resources>
    <string name="app_name">Radary</string>
    <string name="home">Home</string>
    <string name="mylocation">My Places</string>
    <string name="addcamera">AddCamera</string>
    <string name="nightmode">NightMode</string>
    <string name="more">More</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="about">About Radary</string>
    <string name="cameraAdded">Camera Added successfully</string>
    <string name="contact">Contact Us</string>
    <string name="speed">Current speed</string>
    <string name="pleaselogin">Please Login first</string>
    <string name="placesname">PlacesName</string>
    <string name="pickplace">Pick A Place</string>
    <string name="datasent">Message sent succesfully</string>
    <string name="lang">Language</string>
    <string name="verifcationcodesent">Code sent to mail </string>
    <string name="newpass">Activation key</string>
    <string name="chooselang">Choose Language</string>
    <string name="passchanged">Password changed Successfully</string>
    <string name="registerdsuccess">Registration success</string>
    <string name="CreatAccount">Create Account</string>
    <string name="send">Send</string>
    <string name="mailrequired"> Email Required</string>
    <string name="passrequired">Password required</string>
    <string name="slide1">With Radary you are always safe</string>
    <string name="addcam">Add Cam and detect Location easily</string>
    <string name="slide2">Start your Trip without worrying</string>
    <string name="forgetpass">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message">Message...</string>
    <string name="username">Username</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Have Account</string>
    <string name="latitude">Latitude ...</string>
    <string name="longitude">Longitude ...</string>
    <string name="camera_type">Camera Type</string>
    <string name="add_camera">Add Camera</string>
    <string name="cancel">Cancel</string>
    <string name="selectlang">Chose Language</string>
    <string name="no_places">No Places</string>
    <string name="gpsturnoff">Location Service Not Working </string>
    <string name="turnon">Turn On</string>
    <string name="sorry_you_seem_to_be_offline">Sorry .. you seem to be offline</string>
    <string name="please_make_sure_you_are_connected_to_the_internet_and_try_again">Please make sure you are connected to the Internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit ?</string>
    <string name="yes">Yes</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="search">Search</string>
    <string name="title_activity_cam_location" translatable="false">Map</string>
    <string name="select_cam_location">Select Cam Location</string>
    <string name="required">Required</string>
    <string name="choselocation">Choose location and Camera type</string>
    <string name="ok">Ok</string>
    <string name="camtype">Camera Type</string>
    <string name="trafficcam">Traffic Camera</string>
    <string name="securityambush">Security ambush</string>
    <string name="notlogin">Login Not Success</string>
    <string name="pending">Pending</string>
    <string name="title_activity_addmobs" translatable="false">Addmobs</string>
    <string name="agree">Agree</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-5159996687624065~4349736953</string>
    <string name="interstitial_full_screen" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
</resources>
