<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context="com.slashapps.radary.Activities.ContactActivity">

    <RelativeLayout
        android:id="@+id/reltab"
        android:layout_width="match_parent"
            android:background="@color/colorPrimary"
        android:layout_height="50dp">
        <include layout="@layout/custom_toolbar"
            android:id="@+id/toolbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <ConstantClasss.Custom_Textview
                android:layout_width="wrap_content"
                android:text="@string/contact"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_height="wrap_content" />
        </include>


    </RelativeLayout>
    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/reltab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/chats" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent" android:textSize="13sp"
            android:textColor="@color/darkgrey"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_shaplogin"
            android:layout_below="@+id/imglogo"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/email" />
<RelativeLayout
    android:id="@+id/relmessage"
    android:layout_width="match_parent"
    android:layout_below="@+id/input_email"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:background="@drawable/border_shaplogin"
    android:minHeight="100dp"
    android:layout_marginTop="15dp"
    android:layout_height="wrap_content">
    <EditText

        android:paddingLeft="10dp"
        android:padding="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="13sp"
        android:textColor="@color/darkgrey"
        android:id="@+id/input_message"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message" />
</RelativeLayout>

    <com.andexert.library.RippleView
        android:id="@+id/rel_send"
        rv_centered="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
android:layout_centerHorizontal="true"
        android:background="@drawable/border_shapyellow"
        android:layout_below="@+id/relmessage"
        android:padding="10dp">

        <ConstantClasss.Custom_Textview
            android:id="@+id/txt_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:drawablePadding="10dp"
            android:text="@string/send"
            android:layout_centerVertical="true"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:textStyle="bold" />
    </com.andexert.library.RippleView>

</RelativeLayout>
