<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.slashapps.radary.Activities.NoConnectionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ghost" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:justificationMode="inter_word"
            android:text="@string/sorry_you_seem_to_be_offline"
            android:textColor="@color/cast_expanded_controller_background_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView45"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:layout_margin="10dp"
            android:text="@string/please_make_sure_you_are_connected_to_the_internet_and_try_again"
            android:textSize="18sp" />

        <com.andexert.library.RippleView
            android:id="@+id/rel_try_again"
            rv_centered="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_shapyellow"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_ogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:drawablePadding="10dp"
                android:text="@string/try_again"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>
    </RelativeLayout>
</RelativeLayout>
