<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.slashapps.radary.Activities.Loginactivity">

    <RelativeLayout
        android:id="@+id/rellog"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/logooo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rel_login"
        android:layout_below="@+id/rellog"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/cam_layout_sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/age_input"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_shaplogindark"
            android:orientation="horizontal"
            android:padding="15dp"
            tools:ignore="UnknownId">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="3dp"
                app:srcCompat="@drawable/arrw" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/cam_type_sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/imageView"
                android:background="@android:color/transparent"
                android:fontFamily="@font/adobearabic"
                android:gravity="center"
                android:hint="@string/camera_type"
                android:spinnerMode="dropdown"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_pickplace"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pickplace"
            android:capitalize="none"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:background="@drawable/border_shaplogindark"
            android:layout_below="@+id/cam_layout_sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_pickplace"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/lat_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/rel_login"
                android:layout_below="@+id/input_email"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/border_shaplogindark"
                android:hint="@string/latitude"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:password="false"
                 android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="13sp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/long_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_above="@+id/rel_login"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_toEndOf="@+id/input_password"
                android:layout_weight="1"
                android:background="@drawable/border_shaplogindark"
                android:hint="@string/longitude"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <com.andexert.library.RippleView
            android:id="@+id/rel_add_camera"
            rv_centered="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/lin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_shapyellow"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_ogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:drawablePadding="10dp"
                android:text="@string/add_camera"
                android:textColor="@color/blue"
                android:textSize="13dp"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>

    </RelativeLayout>


</RelativeLayout>
