<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_height="200dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
       android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight=".8"
            android:background="@drawable/border_shaplogin">

            <ConstantClasss.Custom_EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:hint="@string/password"
                android:inputType="text"
                android:maxLines="1"
                android:password="true"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight=".8"
            android:background="@drawable/border_shaplogin">

            <ConstantClasss.Custom_EditText
                android:id="@+id/ed_newpass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:hint="@string/newpass"
                android:inputType="text"
                android:password="true"
                android:maxLines="1"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

    </LinearLayout>
    <com.andexert.library.RippleView
        android:id="@+id/rel_send"
        rv_centered="true"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_shapyellow"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:text="@string/send"
            android:layout_centerVertical="true"
            android:background="@color/yello"
            android:textColor="@android:color/white"
            android:textSize="13dp"
            android:textStyle="bold" />
    </com.andexert.library.RippleView>
</LinearLayout>
