<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.slashapps.radary.Fragments.MoreFragment">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/logooo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="40dp"
        android:background="@color/lightgrey"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.andexert.library.RippleView
                android:id="@+id/rel_lang"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:background="@color/lightgrey"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"

                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_earth" />

                <TextView
                    android:id="@+id/txt_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView5"
                    android:drawablePadding="10dp"
                    android:text="@string/lang"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                    />
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rel_home"
            android:background="@color/grey" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.andexert.library.RippleView
                android:id="@+id/rel_contact"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"

                android:background="@color/lightgrey"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView6"
                    android:layout_toEndOf="@+id/imageView6"
                    android:drawablePadding="10dp"
                    android:text="@string/contact"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                     />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_local_phone_black_24dp" />
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rel_home"
            android:background="@color/grey" />
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.andexert.library.RippleView
                android:id="@+id/rel_about"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"

                android:background="@color/lightgrey"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_info" />

                <TextView
                    android:id="@+id/txt_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:layout_toEndOf="@+id/imageView8"
                    android:drawablePadding="10dp"
                    android:text="@string/about"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                    />
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.andexert.library.RippleView
                android:id="@+id/rel_login"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"

                android:background="@color/lightgrey"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_log_out_symbol" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView9"
                    android:drawablePadding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                    />
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/grey" />
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.andexert.library.RippleView
                android:id="@+id/rel_logout"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"

                android:background="@color/lightgrey"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:drawablePadding="10dp"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                    />
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
    </LinearLayout>

</RelativeLayout>
